ALEX: - refactor inventory service